// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`prompt regression edge > captures edge-compressed-timeline 1`] = `
{
  "fragments": [
    {
      "cacheable": true,
      "content": "You are Athena. Respond naturally and helpfully.",
      "id": "fixture.identity",
      "priority": 900,
      "section": "identity",
      "source": "persona",
      "stability": "stable",
    },
    {
      "cacheable": true,
      "content": "Follow platform policy and heartbeat interpretation guidance.",
      "id": "fixture.policy",
      "priority": 800,
      "section": "policy",
      "source": "persona",
      "stability": "stable",
    },
    {
      "cacheable": false,
      "content": "Recent memory:
- User 1: hello athena
- User 2: please help summarize this thread",
      "id": "fixture.memory",
      "priority": 700,
      "section": "memory",
      "source": "memory",
      "stability": "dynamic",
    },
    {
      "cacheable": false,
      "content": "<skills>
Registered skills (use loadSkill to activate):
- mention-aware: Handle mention trigger nuances.
- search-service: Use search tools when needed.
- forward-present: Summarize and forward context.
</skills>",
      "id": "skill.catalog",
      "priority": 510,
      "section": "situation",
      "source": "skill",
      "stability": "dynamic",
    },
    {
      "cacheable": true,
      "content": "## Tool Protocol

Tools retrieve information or compute results. Actions produce side effects.

Use tools only when they directly improve accuracy or actionability.
Prefer minimal, deterministic parameters and avoid speculative tool calls.

If no tool or action is needed, answer directly without calling tools.",
      "id": "tooling.protocol",
      "priority": 500,
      "section": "policy",
      "source": "tooling",
      "stability": "stable",
    },
    {
      "cacheable": false,
      "content": "<tools>
Tools/actions available this round:
- send_message (action): Send a message to current channel
  Parameters: {"type":"object","properties":{"content":{"type":"string"}}}
</tools>",
      "id": "tooling.available",
      "priority": 520,
      "section": "situation",
      "source": "tooling",
      "stability": "dynamic",
    },
    {
      "cacheable": false,
      "content": "Scenario edge-compressed-timeline trigger=mention",
      "id": "fixture.situation",
      "priority": 600,
      "section": "situation",
      "source": "scenario",
      "stability": "dynamic",
    },
  ],
  "fullPrompt": "<identity>
You are Athena. Respond naturally and helpfully.
</identity>

<policy>
Follow platform policy and heartbeat interpretation guidance.

## Tool Protocol

Tools retrieve information or compute results. Actions produce side effects.

Use tools only when they directly improve accuracy or actionability.
Prefer minimal, deterministic parameters and avoid speculative tool calls.

If no tool or action is needed, answer directly without calling tools.
</policy>

<memory>
Recent memory:
- User 1: hello athena
- User 2: please help summarize this thread
</memory>

<situation>
Scenario edge-compressed-timeline trigger=mention

<tools>
Tools/actions available this round:
- send_message (action): Send a message to current channel
  Parameters: {"type":"object","properties":{"content":{"type":"string"}}}
</tools>

<skills>
Registered skills (use loadSkill to activate):
- mention-aware: Handle mention trigger nuances.
- search-service: Use search tools when needed.
- forward-present: Summarize and forward context.
</skills>
</situation>",
  "metadata": {
    "allowedTools": [],
    "generatedAt": "2026-03-15T10:00:00.000Z",
    "loadedSkills": [],
    "scenarioId": "edge-compressed-timeline",
    "sectionOrder": [
      "identity",
      "policy",
      "memory",
      "situation",
    ],
    "stableSignature": "9a2c04ee899bfc56a1e090cbc0155c87bccc7eec2a24e1635b716f80f30184e4",
  },
  "sections": [
    {
      "cacheable": true,
      "content": "<identity>
You are Athena. Respond naturally and helpfully.
</identity>",
      "name": "identity",
    },
    {
      "cacheable": true,
      "content": "<policy>
Follow platform policy and heartbeat interpretation guidance.

## Tool Protocol

Tools retrieve information or compute results. Actions produce side effects.

Use tools only when they directly improve accuracy or actionability.
Prefer minimal, deterministic parameters and avoid speculative tool calls.

If no tool or action is needed, answer directly without calling tools.
</policy>",
      "name": "policy",
    },
    {
      "cacheable": false,
      "content": "<memory>
Recent memory:
- User 1: hello athena
- User 2: please help summarize this thread
</memory>",
      "name": "memory",
    },
    {
      "cacheable": false,
      "content": "<situation>
Scenario edge-compressed-timeline trigger=mention

<tools>
Tools/actions available this round:
- send_message (action): Send a message to current channel
  Parameters: {"type":"object","properties":{"content":{"type":"string"}}}
</tools>

<skills>
Registered skills (use loadSkill to activate):
- mention-aware: Handle mention trigger nuances.
- search-service: Use search tools when needed.
- forward-present: Summarize and forward context.
</skills>
</situation>",
      "name": "situation",
    },
  ],
}
`;

exports[`prompt regression edge > captures edge-long-history-memory 1`] = `
{
  "fragments": [
    {
      "cacheable": true,
      "content": "You are Athena. Respond naturally and helpfully.",
      "id": "fixture.identity",
      "priority": 900,
      "section": "identity",
      "source": "persona",
      "stability": "stable",
    },
    {
      "cacheable": true,
      "content": "Follow platform policy and heartbeat interpretation guidance.",
      "id": "fixture.policy",
      "priority": 800,
      "section": "policy",
      "source": "persona",
      "stability": "stable",
    },
    {
      "cacheable": false,
      "content": "Recent memory:
- User 1: hello athena
- User 2: please help summarize this thread
- Long History User: Long history entry: lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum ",
      "id": "fixture.memory",
      "priority": 700,
      "section": "memory",
      "source": "memory",
      "stability": "dynamic",
    },
    {
      "cacheable": false,
      "content": "<skills>
Registered skills (use loadSkill to activate):
- mention-aware: Handle mention trigger nuances.
- search-service: Use search tools when needed.
- forward-present: Summarize and forward context.
</skills>",
      "id": "skill.catalog",
      "priority": 510,
      "section": "situation",
      "source": "skill",
      "stability": "dynamic",
    },
    {
      "cacheable": true,
      "content": "## Tool Protocol

Tools retrieve information or compute results. Actions produce side effects.

Use tools only when they directly improve accuracy or actionability.
Prefer minimal, deterministic parameters and avoid speculative tool calls.

If no tool or action is needed, answer directly without calling tools.",
      "id": "tooling.protocol",
      "priority": 500,
      "section": "policy",
      "source": "tooling",
      "stability": "stable",
    },
    {
      "cacheable": false,
      "content": "<tools>
Tools/actions available this round:
- send_message (action): Send a message to current channel
  Parameters: {"type":"object","properties":{"content":{"type":"string"}}}
</tools>",
      "id": "tooling.available",
      "priority": 520,
      "section": "situation",
      "source": "tooling",
      "stability": "dynamic",
    },
    {
      "cacheable": false,
      "content": "Scenario edge-long-history-memory trigger=mention",
      "id": "fixture.situation",
      "priority": 600,
      "section": "situation",
      "source": "scenario",
      "stability": "dynamic",
    },
  ],
  "fullPrompt": "<identity>
You are Athena. Respond naturally and helpfully.
</identity>

<policy>
Follow platform policy and heartbeat interpretation guidance.

## Tool Protocol

Tools retrieve information or compute results. Actions produce side effects.

Use tools only when they directly improve accuracy or actionability.
Prefer minimal, deterministic parameters and avoid speculative tool calls.

If no tool or action is needed, answer directly without calling tools.
</policy>

<memory>
Recent memory:
- User 1: hello athena
- User 2: please help summarize this thread
- Long History User: Long history entry: lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum 
</memory>

<situation>
Scenario edge-long-history-memory trigger=mention

<tools>
Tools/actions available this round:
- send_message (action): Send a message to current channel
  Parameters: {"type":"object","properties":{"content":{"type":"string"}}}
</tools>

<skills>
Registered skills (use loadSkill to activate):
- mention-aware: Handle mention trigger nuances.
- search-service: Use search tools when needed.
- forward-present: Summarize and forward context.
</skills>
</situation>",
  "metadata": {
    "allowedTools": [],
    "generatedAt": "2026-03-15T10:00:00.000Z",
    "loadedSkills": [],
    "scenarioId": "edge-long-history-memory",
    "sectionOrder": [
      "identity",
      "policy",
      "memory",
      "situation",
    ],
    "stableSignature": "9a2c04ee899bfc56a1e090cbc0155c87bccc7eec2a24e1635b716f80f30184e4",
  },
  "sections": [
    {
      "cacheable": true,
      "content": "<identity>
You are Athena. Respond naturally and helpfully.
</identity>",
      "name": "identity",
    },
    {
      "cacheable": true,
      "content": "<policy>
Follow platform policy and heartbeat interpretation guidance.

## Tool Protocol

Tools retrieve information or compute results. Actions produce side effects.

Use tools only when they directly improve accuracy or actionability.
Prefer minimal, deterministic parameters and avoid speculative tool calls.

If no tool or action is needed, answer directly without calling tools.
</policy>",
      "name": "policy",
    },
    {
      "cacheable": false,
      "content": "<memory>
Recent memory:
- User 1: hello athena
- User 2: please help summarize this thread
- Long History User: Long history entry: lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum 
</memory>",
      "name": "memory",
    },
    {
      "cacheable": false,
      "content": "<situation>
Scenario edge-long-history-memory trigger=mention

<tools>
Tools/actions available this round:
- send_message (action): Send a message to current channel
  Parameters: {"type":"object","properties":{"content":{"type":"string"}}}
</tools>

<skills>
Registered skills (use loadSkill to activate):
- mention-aware: Handle mention trigger nuances.
- search-service: Use search tools when needed.
- forward-present: Summarize and forward context.
</skills>
</situation>",
      "name": "situation",
    },
  ],
}
`;

exports[`prompt regression edge > captures edge-multi-image-budget 1`] = `
{
  "fragments": [
    {
      "cacheable": true,
      "content": "You are Athena. Respond naturally and helpfully.",
      "id": "fixture.identity",
      "priority": 900,
      "section": "identity",
      "source": "persona",
      "stability": "stable",
    },
    {
      "cacheable": true,
      "content": "Follow platform policy and heartbeat interpretation guidance.",
      "id": "fixture.policy",
      "priority": 800,
      "section": "policy",
      "source": "persona",
      "stability": "stable",
    },
    {
      "cacheable": false,
      "content": "Recent memory:
- User 1: hello athena
- User 2: please help summarize this thread
- Image Sender: [image] uploaded chart screenshot",
      "id": "fixture.memory",
      "priority": 700,
      "section": "memory",
      "source": "memory",
      "stability": "dynamic",
    },
    {
      "cacheable": false,
      "content": "<skills>
Registered skills (use loadSkill to activate):
- mention-aware: Handle mention trigger nuances.
- search-service: Use search tools when needed.
- forward-present: Summarize and forward context.
</skills>",
      "id": "skill.catalog",
      "priority": 510,
      "section": "situation",
      "source": "skill",
      "stability": "dynamic",
    },
    {
      "cacheable": true,
      "content": "## Tool Protocol

Tools retrieve information or compute results. Actions produce side effects.

Use tools only when they directly improve accuracy or actionability.
Prefer minimal, deterministic parameters and avoid speculative tool calls.

If no tool or action is needed, answer directly without calling tools.",
      "id": "tooling.protocol",
      "priority": 500,
      "section": "policy",
      "source": "tooling",
      "stability": "stable",
    },
    {
      "cacheable": false,
      "content": "<tools>
Tools/actions available this round:
- send_message (action): Send a message to current channel
  Parameters: {"type":"object","properties":{"content":{"type":"string"}}}
</tools>",
      "id": "tooling.available",
      "priority": 520,
      "section": "situation",
      "source": "tooling",
      "stability": "dynamic",
    },
    {
      "cacheable": false,
      "content": "Scenario edge-multi-image-budget trigger=mention",
      "id": "fixture.situation",
      "priority": 600,
      "section": "situation",
      "source": "scenario",
      "stability": "dynamic",
    },
  ],
  "fullPrompt": "<identity>
You are Athena. Respond naturally and helpfully.
</identity>

<policy>
Follow platform policy and heartbeat interpretation guidance.

## Tool Protocol

Tools retrieve information or compute results. Actions produce side effects.

Use tools only when they directly improve accuracy or actionability.
Prefer minimal, deterministic parameters and avoid speculative tool calls.

If no tool or action is needed, answer directly without calling tools.
</policy>

<memory>
Recent memory:
- User 1: hello athena
- User 2: please help summarize this thread
- Image Sender: [image] uploaded chart screenshot
</memory>

<situation>
Scenario edge-multi-image-budget trigger=mention

<tools>
Tools/actions available this round:
- send_message (action): Send a message to current channel
  Parameters: {"type":"object","properties":{"content":{"type":"string"}}}
</tools>

<skills>
Registered skills (use loadSkill to activate):
- mention-aware: Handle mention trigger nuances.
- search-service: Use search tools when needed.
- forward-present: Summarize and forward context.
</skills>
</situation>",
  "metadata": {
    "allowedTools": [],
    "generatedAt": "2026-03-15T10:00:00.000Z",
    "loadedSkills": [],
    "scenarioId": "edge-multi-image-budget",
    "sectionOrder": [
      "identity",
      "policy",
      "memory",
      "situation",
    ],
    "stableSignature": "9a2c04ee899bfc56a1e090cbc0155c87bccc7eec2a24e1635b716f80f30184e4",
  },
  "sections": [
    {
      "cacheable": true,
      "content": "<identity>
You are Athena. Respond naturally and helpfully.
</identity>",
      "name": "identity",
    },
    {
      "cacheable": true,
      "content": "<policy>
Follow platform policy and heartbeat interpretation guidance.

## Tool Protocol

Tools retrieve information or compute results. Actions produce side effects.

Use tools only when they directly improve accuracy or actionability.
Prefer minimal, deterministic parameters and avoid speculative tool calls.

If no tool or action is needed, answer directly without calling tools.
</policy>",
      "name": "policy",
    },
    {
      "cacheable": false,
      "content": "<memory>
Recent memory:
- User 1: hello athena
- User 2: please help summarize this thread
- Image Sender: [image] uploaded chart screenshot
</memory>",
      "name": "memory",
    },
    {
      "cacheable": false,
      "content": "<situation>
Scenario edge-multi-image-budget trigger=mention

<tools>
Tools/actions available this round:
- send_message (action): Send a message to current channel
  Parameters: {"type":"object","properties":{"content":{"type":"string"}}}
</tools>

<skills>
Registered skills (use loadSkill to activate):
- mention-aware: Handle mention trigger nuances.
- search-service: Use search tools when needed.
- forward-present: Summarize and forward context.
</skills>
</situation>",
      "name": "situation",
    },
  ],
}
`;
